Reformatting and fixing javadoc errors