@@ -36,6 +36,21 @@ allprojects {
         }
     }
 
+    configurations {
+
+        [
+                "com.vaadin.webjar",
+                "org.webjars.bowergithub.insites",
+                "org.webjars.bowergithub.polymer",
+                "org.webjars.bowergithub.polymerelements",
+                "org.webjars.bowergithub.vaadin",
+                "org.webjars.bowergithub.webcomponents"
+        ].each { dep ->
+            all*.exclude(group: dep)
+        }
+
+    }
+
 }
 
 subprojects {
@@ -107,10 +122,6 @@ subprojects {
             archiveClassifier = 'javadoc'
         }
 
-        javadoc.options {
-            addStringOption('-release', '15')
-            addBooleanOption('-enable-preview', true)
-        }
 
 
         publications {
@@ -163,16 +174,4 @@ subprojects {
         }
     }
 
-    tasks.withType(JavaCompile) {
-        options.compilerArgs += '--enable-preview'
-    }
-
-
-    tasks.withType(Test) {
-        jvmArgs += '--enable-preview'
-    }
-
-    tasks.withType(JavaExec) {
-        jvmArgs += '--enable-preview'
-    }
 }
